# ns-eof

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Simulation.h  batch.py  cmake-with-gcc.sh  cmake-with-icc.sh  conf_cavity.xml  conf_channel.xml  conf_channel_strong_1x1.job  conf_channel_strong_1x1.xml  conf_channel_strong_1x1x1.job  conf_channel_strong_1x1x1.xml  conf_channel_strong_2x2.job  conf_channel_strong_2x2.xml  conf_channel_strong_2x2x2.job  conf_channel_strong_2x2x2.xml  conf_channel_strong_3x3.job  conf_channel_strong_3x3.xml  conf_channel_strong_3x3x3.job  conf_channel_strong_3x3x3.xml  conf_channel_strong_4x4.job  conf_channel_strong_4x4.xml  conf_channel_strong_4x4x4.job  conf_channel_strong_4x4x4.xml  conf_channel_strong_5x5.job  conf_channel_turbulent.xml  conf_channel_weak_1x1.job  conf_channel_weak_1x1.xml  conf_channel_weak_1x1x1.job  conf_channel_weak_1x1x1.xml  conf_channel_weak_2x2.job  conf_channel_weak_2x2.xml  conf_channel_weak_2x2x2.job  conf_channel_weak_2x2x2.xml  conf_channel_weak_3x3.job  conf_channel_weak_3x3.xml  conf_channel_weak_3x3x3.job  (+19 more)
ScalingTests/: conf_cavity_strong_1x1.job  conf_cavity_strong_1x1.xml  conf_cavity_strong_1x1x1.job  conf_cavity_strong_1x1x1.xml  conf_cavity_strong_2x2.job  conf_cavity_strong_2x2.xml  conf_cavity_strong_2x2x2.job  conf_cavity_strong_2x2x2.xml  conf_cavity_strong_3x3.job  conf_cavity_strong_3x3.xml  conf_cavity_strong_3x3x3.job  conf_cavity_strong_3x3x3.xml  conf_cavity_strong_4x4.job  conf_cavity_strong_4x4.xml  conf_cavity_strong_4x4x4.job  conf_cavity_strong_4x4x4.xml  conf_cavity_strong_5x5.job  conf_cavity_strong_5x5.xml  conf_cavity_weak_1x1.job  conf_cavity_weak_1x1.xml  conf_cavity_weak_1x1x1.job  conf_cavity_weak_1x1x1.xml  conf_cavity_weak_2x2.job  conf_cavity_weak_2x2.xml  conf_cavity_weak_2x2x2.job  conf_cavity_weak_2x2x2.xml  conf_cavity_weak_3x3.job  conf_cavity_weak_3x3.xml  conf_cavity_weak_3x3x3.job  conf_cavity_weak_3x3x3.xml  conf_cavity_weak_4x4.job  conf_cavity_weak_4x4.xml  conf_cavity_weak_4x4x4.job  conf_cavity_weak_4x4x4.xml  conf_cavity_weak_5x5.job  conf_cavity_weak_5x5.xml  conf_cavity_weak_6x6.job  conf_cavity_weak_6x6.xml  conf_cavity_weak_7x7.job  conf_cavity_weak_7x7.xml  (+40 more)
TurbulentJobs/no_vt/: conf_channel_turbulence_re_10000_x_0.3_y_0.4.job  conf_channel_turbulence_re_10000_x_0.3_y_0.4.xml  conf_channel_turbulence_re_10000_x_0.5_y_0.6.job  conf_channel_turbulence_re_10000_x_0.5_y_0.6.xml  conf_channel_turbulence_re_1500_x_0.3_y_0.4.job  conf_channel_turbulence_re_1500_x_0.3_y_0.4.xml  conf_channel_turbulence_re_1500_x_0.5_y_0.6.job  conf_channel_turbulence_re_1500_x_0.5_y_0.6.xml  conf_channel_turbulence_re_5000_x_0.3_y_0.4.job  conf_channel_turbulence_re_5000_x_0.3_y_0.4.xml  conf_channel_turbulence_re_5000_x_0.5_y_0.6.job  conf_channel_turbulence_re_5000_x_0.5_y_0.6.xml  conf_channel_turbulence_re_500_x_0.3_y_0.4.job  conf_channel_turbulence_re_500_x_0.3_y_0.4.xml  conf_channel_turbulence_re_500_x_0.5_y_0.6.job  conf_channel_turbulence_re_500_x_0.5_y_0.6.xml  jobwriter_channel_turbulent_no_vt.py
TurbulentJobs/normal/: conf_channel_turbulence_re_10000_x_0.3_y_0.4.job  conf_channel_turbulence_re_10000_x_0.3_y_0.4.xml  conf_channel_turbulence_re_10000_x_0.5_y_0.6.job  conf_channel_turbulence_re_10000_x_0.5_y_0.6.xml  conf_channel_turbulence_re_1500_x_0.3_y_0.4.job  conf_channel_turbulence_re_1500_x_0.3_y_0.4.xml  conf_channel_turbulence_re_1500_x_0.5_y_0.6.job  conf_channel_turbulence_re_1500_x_0.5_y_0.6.xml  conf_channel_turbulence_re_5000_x_0.3_y_0.4.job  conf_channel_turbulence_re_5000_x_0.3_y_0.4.xml  conf_channel_turbulence_re_5000_x_0.5_y_0.6.job  conf_channel_turbulence_re_5000_x_0.5_y_0.6.xml  conf_channel_turbulence_re_500_x_0.3_y_0.4.job  conf_channel_turbulence_re_500_x_0.3_y_0.4.xml  conf_channel_turbulence_re_500_x_0.5_y_0.6.job  conf_channel_turbulence_re_500_x_0.5_y_0.6.xml  jobwriter_channel_turbulent.py
TurbulentJobs/prandtl/: conf_channel_turbulence_re_10000_x_0.3_y_0.4.job  conf_channel_turbulence_re_10000_x_0.3_y_0.4.xml  conf_channel_turbulence_re_10000_x_0.5_y_0.6.job  conf_channel_turbulence_re_10000_x_0.5_y_0.6.xml  conf_channel_turbulence_re_1500_x_0.3_y_0.4.job  conf_channel_turbulence_re_1500_x_0.3_y_0.4.xml  conf_channel_turbulence_re_1500_x_0.5_y_0.6.job  (+10 more)
scripts/: build.sh  dependencies.sh
src/: CMakeLists.txt  Configuration.cpp  DataStructures.h  Definitions.h  FlowField.cpp  FlowField.h  Iterators.cpp  Iterators.h  Parameters.h  Simulation.h  TurbulentSimulation.h  main.cpp
src/parallelManagers/: PetscParallelManager.cpp  PetscParallelManager.h
src/solvers/: PetscSolver.cpp  SORSolver.cpp
src/stencils/: InitTaylorGreenFlowFieldStencil.h  MaxUStencil.cpp  MaxUStencil.h  ObstacleDistanceStencil.cpp  ObstacleDistanceStencil.h  StencilFunctions.h  TurbulenceFGHStencil.cpp  TurbulenceFGHStencil.h  TurbulenceVTKStencil.cpp  TurbulenceVTKStencil.h  TurbulentViscosityStencil.cpp  TurbulentViscosityStencil.h  VTKStencil.cpp  VTKStencil.h  WallDistanceStencil.cpp  WallDistanceStencil.h  XDMFStencil.cpp  XDMFStencil.h
src/stencils/communicationStencils/: CommunicationStencil.cpp  CommunicationStencil.h  Direction.cpp  Direction.h  PressureBufferFillStencil.cpp  PressureBufferFillStencil.h  PressureBufferReadStencil.cpp  PressureBufferReadStencil.h  VelocityBufferFillStencil.cpp  VelocityBufferFillStencil.h  VelocityBufferReadStencil.cpp  VelocityBufferReadStencil.h  ViscosityBufferFillStencil.cpp  ViscosityBufferFillStencil.h  ViscosityBufferReadStencil.cpp  ViscosityBufferReadStencil.h  WallDistanceBufferFillStencil.cpp  WallDistanceBufferFillStencil.h  WallDistanceBufferReadStencil.cpp  WallDistanceBufferReadStencil.h
stencils/: VTKStencil.cpp  VTKStencil.h
test/: CMakeLists.txt  ComputeSTP2D_Test.cpp  DummyTestSuite.cpp  FGH_Test.cpp  TestSuite.cpp  TestingFunctions.h  test_main.cpp  vt_interpolate_Test.cpp
test/stencils/: StencilFunctionsTests.cpp  TurbulenceVTKStencilTests.cpp  VTKStencilTests.cpp  WallDistanceStencilsTests.cpp
test/stencils/communicationStencils/: Direction.test.cpp
